manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "democluster-e188"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "democluster-e188"
  template:
    metadata:
      labels:
        app: "democluster-e188"
    spec:
      containers:
        - name: "democluster-e188"
          image: "simpleapi.azurecr.io/democluster"
          ports:
          - containerPort: 9000
